--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: system-ui, sans-serif;
+    background-color: #111125;
+    color: white;
+
+    height: 100vh;
+    margin: 0;
+    display: grid;
+    gap: 20px;
+    place-content: center;
+}
+
+
+
+
+.hover-1 {
+    background: linear-gradient(#1095c1 0 0) left / var(--p,0) no-repeat;
+    transition: .4s,background-position 0s;
+}
+
+.hover-1:hover {
+    --p: 100%;
+    background-position: right;
+}
+
+h1 {
+    cursor: pointer;
 }
